--- a/lib/grocery_planner_web/live/meal_planner_live.html.heex
+++ b/lib/grocery_planner_web/live/meal_planner_live.html.heex
@@ -188,8 +188,7 @@
             <div class={[
               "p-4 text-center font-semibold border-b transition-colors duration-200",
               if(Date.compare(day, Date.utc_today()) == :eq,
-                do:
-                  "bg-primary text-primary-content border-transparent",
+                do: "bg-primary text-primary-content border-transparent",
                 else: "bg-base-200 text-base-content border-base-300 group-hover:bg-base-100"
               )
             ]}>
