chore: formatting fix

--- a/lib/grocery_planner_web/live/voting_live.html.heex
+++ b/lib/grocery_planner_web/live/voting_live.html.heex
@@ -23,7 +23,7 @@
           :if={@session && remaining_seconds(@session, @now) == 0}
           phx-click="finalize"
           disabled={@finalizing}
-          class={@finalizing && "btn-disabled" || "btn-success"}
+          class={(@finalizing && "btn-disabled") || "btn-success"}
           type="button"
         >
           {if @finalizing, do: "Finalizing...", else: "Finalize"}
