--- a/lib/grocery_planner_web/live/recipes_live.html.heex
+++ b/lib/grocery_planner_web/live/recipes_live.html.heex
@@ -78,6 +78,13 @@
           </svg>
           Favorites
         </.button>
+        <.button
+          phx-click="toggle_chains"
+          class={if(@show_chains, do: "btn btn-secondary", else: "btn btn-ghost")}
+        >
+          <.icon name="hero-arrow-path" class="w-5 h-5 inline mr-1" />
+          Chains
+        </.button>
       </div>
     </div>
 
